force-app/main/default/objects/Product_Case__c/Product_Case__c.object-meta.xml
<CustomObject>
    <label>Product Case</label>
    <nameField>
        <displayFormat>Product Case-{000000}</displayFormat>
        <label>Product Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>