force-app/main/default/objects/Product_Case__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Product__c</field>
            <operation>equals</operation>
            <valueField>Asset.Product2Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Product Cases</relationshipLabel>
    <relationshipName>Product_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>