force-app/main/default/objects/Product_Case__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <label>Final Price</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>