force-app/main/default/objects/Product_Case__c/fields/Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Product Cases (Parent Case)</relationshipLabel>
    <relationshipName>Product_Parent_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>