force-app/main/default/objects/Product_Case__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(AND(TEXT(Type__c)=&quot;Product to send&quot;, Send__c),  IMAGE(&quot;/servlet/servlet.FileDownload?file=0156E000000H29Y&quot;, &quot;Send&quot; , 30 , 30),
			
			IF(AND(TEXT(Type__c)=&quot;Product to send&quot;,NOT(Send__c) ),IMAGE(&quot;/servlet/servlet.FileDownload?file=0156E000000H29d&quot;, &quot;Not Send&quot; , 30 , 30), 
			
			IF(AND(TEXT(Type__c)=&quot;Identify SKU&quot; ,NOT(Send__c)), IMAGE(&quot;/servlet/servlet.FileDownload?file=0156E000000H29T&quot;, &quot;Identify SKU&quot; , 30 , 30),
						
  IMAGE(&quot;/servlet/servlet.FileDownload?file=0156E000000H29T&quot;, &quot;Identify SKU&quot; , 30 , 30)
				
		)))</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>