force-app/main/default/objects/Product_Case__c/fields/Suggested_by_the_system__c.field-meta.xml
<CustomField>
    <fullName>Suggested_by_the_system__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if the product to send has been calculated automatically bv the decision tree</description>
    <label>Suggested by the system</label>
    <type>Checkbox</type>
</CustomField>