force-app/main/default/objects/Product_Case__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identified SKU</fullName>
            </value>
            <value>
                <fullName>Product to send</fullName>
                <default>true</default>
                <label>Product to send</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>